--- a/day22.ipynb
+++ b/day22.ipynb
@@ -1633,6 +1633,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataas=pd.read_csv('Diwali Sales Data.xls',encoding='iso-8859-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
