a minor changes made

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2555,7 +2555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "7869ab08",
    "metadata": {},
    "outputs": [
@@ -2566,14 +2566,14 @@
        "       0, 2, 2, 2, 2, 2, 0, 0])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neigh_prediction=knn.predict(X_test)\n",
-    "neigh_prediction"
+    "neigh_predictions=knn.predict(X_test)\n",
+    "neigh_predictions"
    ]
   },
   {
