movie recommendation system data cleaned

--- a/day20 (2).ipynb
+++ b/day20 (2).ipynb
@@ -15,7 +15,11 @@
   {
    "cell_type": "raw",
    "id": "541c1f4e-9fdc-491c-8ee3-290f6659feaa",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "Types of supervised machine learning\n",
     "a)Regression\n",
@@ -33,7 +37,7 @@
     "-splitting(80%20%)\n",
     "-train model\n",
     "-error calculation(mes<, r2>)\n",
-    "-deployment(heraku, aws)\n",
+    "-deployment(heroku, aws)\n",
     "    -streamlit(), flask()"
    ]
   },
