--- a/day22.ipynb
+++ b/day22.ipynb
@@ -1645,7 +1645,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#time series analysis includes the following\n",
+    "#1. Trend\n",
+    "#2. Seasonality\n",
+    "#3. Cyclical"
+   ]
   }
  ],
  "metadata": {
