--- a/day28A.ipynb
+++ b/day28A.ipynb
@@ -1225,7 +1225,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#nltk meaning  \n",
+    "#univariate analysis of the data is defined as the simplest form of data analysis where the data is represented in the form of a single variable.\n",
+    "#bivariate analysis is the simultaneous analysis of two variables (attributes). It explores the concept of relationship between two variables, whether there exists an association and the strength of this association, or whether there are differences between two variables and the significance of these differences.\n",
+    "#multivariate analysis is a set of techniques used for understanding the relationships between more than two variables. It is basically the analysis of the relationships between multiple variables at the same time."
+   ]
   }
  ],
  "metadata": {
